--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
             "es2017",
             "dom"
         ],
-        "strict": true
+        "strict": false,
+        "noImplicitAny": false
     }
 }
